# filezilla-server

./: Makefile  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  config.status  configure  configure.ac  libtool
demos/: Makefile  Makefile.am  Makefile.in
demos/administration_client/: administration_client.cpp
demos/echo/: echo.cpp
demos/filetransfer/: filetransfer.cpp
demos/httpget/: httpget.cpp
pkg/mac/: Info.plist  Info.plist.in  Makefile  Makefile.am  Makefile.in  component.plist  component.plist.in  server.dist  server.dist.in
pkg/unix/: Makefile  Makefile.am  Makefile.in  config  control  control.in  filezilla-server-gui.desktop  filezilla-server-gui.desktop.in  filezilla-server.service  postinst  postrm  prerm  templates  templates.in
pkg/windows/: Makefile  Makefile.am  Makefile.in  ShellExecAsUser.dll.txt  adminsettings.extra.nsh  adminsettings.nsddef  adminsettings.nsdinc  deps_difference.sh  deps_intersection.sh  deps_union.sh  dllcopy.sh  generate_nsh_from_deps.sh  install.nsi  install.nsi.in  lang_en.nsh  lang_it.nsh  macros.nsh  process_running.nsh  serversettings.extra.nsh  serversettings.nsddef  serversettings.nsdinc  servicesettings.extra.nsh  servicesettings.nsddef  servicesettings.nsdinc
res/: Makefile  Makefile.am  Makefile.in  filezilla-server-gui.icns  filezilla-server-gui.manifest.xml  filezilla-server-gui.manifest.xml.in  filezilla-server-gui.rc  filezilla-server-gui.version.rc  filezilla-server-gui.version.rc.in  filezilla-server.rc  filezilla-server.version.rc  filezilla-server.version.rc.in  org.filezilla-project.filezilla-server.service.plist  org.filezilla-project.filezilla-server.service.plist.in
res/share/: Makefile  Makefile.in
res/share/icons/: Makefile  Makefile.in
src/filezilla/: Makefile  Makefile.am  Makefile.in  build_info.cpp  build_info.hpp  channel.cpp  channel.hpp  covariant.hpp  debug.hpp  enum_bitops.hpp  event_loop_pool.cpp  event_loop_pool.hpp  expected.hpp  forward_like.hpp  hostaddress.cpp  hostaddress.hpp  intrusive_list.hpp  known_paths.cpp  known_paths.hpp  known_paths_osx.mm  pipe.cpp  pipe.hpp  port_randomizer.cpp  port_randomizer.hpp  receiver.hpp  remove_event.hpp  securable_socket.cpp  securable_socket.hpp  service.hpp  shared_context.hpp  signal_notifier.cpp  signal_notifier.hpp  socket_stack.hpp  string.hpp  sys_info.cpp  sys_info.hpp  tls_exit.hpp  transformed_view.hpp  value_or.hpp
src/filezilla/acme/: cert_info.cpp  cert_info.hpp  challenges.hpp  client.cpp  client.hpp  daemon.cpp  daemon.hpp
src/filezilla/authentication/: authenticator.cpp  authenticator.hpp  autobanner.cpp  autobanner.hpp  credentials.cpp  credentials.hpp  error.hpp  file_based_authenticator.cpp  file_based_authenticator.hpp  method.cpp  method.hpp  password.cpp  password.hpp  password_with_impersonation.cpp  password_with_impersonation.hpp  throttled_authenticator.cpp  throttled_authenticator.hpp  user.cpp  user.hpp
src/filezilla/buffer_operator/: adder.hpp  consumer.hpp  file_reader.hpp  file_writer.hpp  line_consumer.hpp  monitored_adder.hpp  monitored_consumer.hpp  serialized_adder.hpp  serialized_consumer.hpp  socket_adapter.cpp  socket_adapter.hpp  streamed_adder.hpp  tvfs_entries_lister.hpp
src/filezilla/ftp/: ascii_layer.cpp  ascii_layer.hpp  commander.cpp  commander.hpp  controller.hpp  server.cpp  server.hpp  session.cpp  session.hpp
src/filezilla/http/: client.cpp  client.hpp  headers.cpp  headers.hpp  message_consumer.cpp  message_consumer.hpp  request.hpp  response.cpp  response.hpp
src/filezilla/impersonator/: archives.cpp  archives.hpp  channel.cpp  channel.hpp  client.cpp  client.hpp  messages.hpp  parent_proxy.cpp  parent_proxy.hpp  process.cpp  process.hpp  server.cpp  server.hpp  util.cpp  util.hpp
src/filezilla/logger/: file.cpp  file.hpp  hierarchical.cpp  hierarchical.hpp  modularized.cpp  modularized.hpp  null.cpp  null.hpp  scoped.hpp  splitter.cpp  splitter.hpp  stdio.cpp  stdio.hpp  type.hpp
src/filezilla/mpl/: append.hpp  arity.hpp  at.hpp  contains.hpp  count.hpp  count_if.hpp  fold.hpp  for_each.hpp  identity.hpp  if.hpp  index_of.hpp  lambda.hpp  next.hpp  placeholders.hpp  prepend.hpp  remove.hpp  rename.hpp  size.hpp  size_t.hpp  vector.hpp  with_index.hpp
src/filezilla/preprocessor/: cat.hpp  expand.hpp  identity.hpp  str.hpp
src/filezilla/receiver/: async.hpp  detail.hpp  enabled_for_receiving.cpp  enabled_for_receiving.hpp  event.hpp  handle.hpp  sync.hpp
src/filezilla/rmp/: address_info.hpp  any_exception.hpp  any_message.hpp  command.hpp  dispatch.hpp  engine.hpp  exceptions.hpp  message.hpp  version.hpp
src/filezilla/serialization/: access.hpp  helpers.hpp  serialization.hpp  trait.hpp  version.hpp
src/filezilla/tcp/: address_info.hpp  address_list.hpp  automatically_serializable_binary_address_list.cpp  automatically_serializable_binary_address_list.hpp  binary_address_list.cpp  binary_address_list.hpp  client.cpp  client.hpp  listener.cpp  listener.hpp  server.cpp  (+7 more)
src/gui/: Makefile  Makefile.am  Makefile.in  addressinfolisteditor.cpp  addressinfolisteditor.hpp  binaryaddresslisteditor.cpp  binaryaddresslisteditor.hpp  certinfoeditor.cpp  certinfoeditor.hpp  connectiondialog.cpp  connectiondialog.hpp  credentialseditor.cpp  credentialseditor.hpp  dialogex.hpp  downloader.cpp  downloader.hpp  eventex.hpp  filterseditor.cpp  filterseditor.hpp  fluidcolumnlayoutmanager.cpp  fluidcolumnlayoutmanager.hpp  generatecertificatedialog.cpp  generatecertificatedialog.hpp  glue.hpp  groupseditor.cpp  groupseditor.hpp  groupslist.cpp  groupslist.hpp  gui_config_paths.hpp  helpers.cpp  helpers.hpp  integraleditor.cpp  integraleditor.hpp  listctrlex.cpp  listctrlex.hpp  locale.hpp  main.cpp  mounttableeditor.cpp  mounttableeditor.hpp  networkconfigwizard.cpp  (+27 more)
src/server/: Makefile  Makefile.am  Makefile.in  administration.hpp  administrator.cpp  administrator.hpp  legacy_options.hpp  main.cpp  server_config_paths.hpp  server_settings.cpp  server_settings.hpp
tests/: Makefile  Makefile.am  Makefile.in  basic_path.cpp  intrusive_list.cpp  parser.cpp  test_utils.hpp  tvfs.cpp
(+156 files in other folders)
