if FZ_UNIX

logo16dir = $(datadir)/icons/hicolor
nobase_dist_logo16_DATA = 16x16/apps/filezilla-server-gui.png

logo20dir = $(datadir)/icons/hicolor
nobase_dist_logo20_DATA = 20x20/apps/filezilla-server-gui.png

logo24dir = $(datadir)/icons/hicolor
nobase_dist_logo24_DATA = 24x24/apps/filezilla-server-gui.png

logo32dir = $(datadir)/icons/hicolor
nobase_dist_logo32_DATA = 32x32/apps/filezilla-server-gui.png

logo48dir = $(datadir)/icons/hicolor
nobase_dist_logo48_DATA = 48x48/apps/filezilla-server-gui.png

logo64dir = $(datadir)/icons/hicolor
nobase_dist_logo64_DATA = 64x64/apps/filezilla-server-gui.png

logo128dir = $(datadir)/icons/hicolor
nobase_dist_logo128_DATA = 128x128/apps/filezilla-server-gui.png

logo256dir = $(datadir)/icons/hicolor
nobase_dist_logo256_DATA = 256x256/apps/filezilla-server-gui.png

logoscalabledir = $(datadir)/icons/hicolor
nobase_dist_logoscalable_DATA = scalable/apps/filezilla-server-gui.svg

endif


